[workspace]
resolver = "2"
members = [
    "drg_mission_gen_core",
    "drg_mission_gen_seed_cli",
    "drg_mission_gen_gsg_endpoint_cli",
    "drg_mission_gen_tracing",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry", "std"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
time = "0.3.36"
