[package]
name = "drg_mission_gen_core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
pretty_assertions = "1.4.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
time = "0.3.36"
