[package]
name = "drg_mission_gen_gsg_endpoint_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
drg_mission_gen_tracing = { path = "../drg_mission_gen_tracing" }
drg_mission_gen_core = { path = "../drg_mission_gen_core" }

tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
strum.workspace = true
time.workspace = true
serde.workspace = true
serde_json.workspace = true

ureq = { version = "2", features = ["json"] }
clap = { version = "4", features = ["derive"] }
